Tweak tmux a little

--- a/experimental/tmux/tmux.conf
+++ b/experimental/tmux/tmux.conf
@@ -16,14 +16,12 @@ bind -n S-left prev
 bind -n S-right next
 
 #switch panels
-bind k selectp -U # switch to panel Up
-bind j selectp -D # switch to panel Down
-bind h selectp -L # switch to panel Left
-bind l selectp -R # switch to panel Right
+bind -n C-k selectp -U # switch to panel Up
+bind -n C-j selectp -D # switch to panel Down
+bind -n C-h selectp -L # switch to panel Left
+bind -n C-l selectp -R # switch to panel Right
 
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
-source-file ~/dotfiles/experimental/tmux/tmuxln.conf
-
-
+bind -n Pageup copy-mode -u
