Avoid arrows in tmux

--- a/experimental/tmux/tmux.conf
+++ b/experimental/tmux/tmux.conf
@@ -11,9 +11,9 @@ unbind '%'
 bind r source-file ~/.tmux.conf
 
 #urxvt tab like window switching (-n: no prior escape seq)
-bind -n S-down new-window
-bind -n S-left prev
-bind -n S-right next
+bind -n J new-window
+bind -n H prev
+bind -n L next
 
 #switch panels
 bind -n C-k selectp -U # switch to panel Up
