Back to defaults w/ nicer format for status

--- a/experimental/tmux/tmux.conf
+++ b/experimental/tmux/tmux.conf
@@ -2,6 +2,8 @@ set-option -g destroy-unattached off
 set -g escape-time 0
 set -g repeat-time 0
 
+set -g xterm-keys "on"
+
 bind 3 split-window -h
 bind 2 split-window -v
 unbind '"'
@@ -11,9 +13,9 @@ unbind '%'
 bind r source-file ~/.tmux.conf
 
 #urxvt tab like window switching (-n: no prior escape seq)
-bind -n C-J new-window
-bind -n C-H prev
-bind -n C-L next
+bind -n S-down new-window
+bind -n S-left prev
+bind -n S-right next
 
 #switch panels
 bind -n C-k selectp -U # switch to panel Up
@@ -25,3 +27,7 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 bind -n Pageup copy-mode -u
+
+
+set-option -g status-right '#(echo "#{pane_title}" | cut -d" " -f1) #[fg=red,dim,bg=default]#(pgrep -alfP "#{pane_pid}" | cut -d" " -f3-)#[fg=default,nodim,bg=default]#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M %d-%b-%y'
+set-option -g status-right-length 80
