--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -29,5 +29,5 @@ bind-key -r C-l select-window -t :+
 bind -n Pageup copy-mode -u
 
 
-set-option -g status-right '#(echo "#{pane_title}" | cut -d" " -f1) #[fg=red,dim,bg=default]#(pgrep -alfP "#{pane_pid}" | cut -d" " -f3-)#[fg=default,nodim,bg=default]#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M %d-%b-%y'
+set-option -g status-right '#(echo "#{pane_title}" | cut -d" " -f1) #[fg=red,dim,bg=default]#(pgrep -alfP "#{pane_pid}" | grep ssh | cut -d" " -f3-)#[fg=default,nodim,bg=default]#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M %d-%b-%y'
 set-option -g status-right-length 80
