Make active pane pop-out more in tmux

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -27,6 +27,18 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 bind -n Pageup copy-mode -u
+#
+# set active-inactive window styles
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=default,bg=colour234'
+
+# Pane border
+set -g pane-border-bg default
+set -g pane-border-fg colour238
+
+# Active pane border
+set -g pane-active-border-bg default
+set -g pane-active-border-fg blue
 
 
 set-option -g status-right '#(echo "#{pane_title}" | cut -d" " -f1) #[fg=red,dim,bg=default]#(pgrep -alfP "#{pane_pid}" | grep ssh | cut -d" " -f3-)#[fg=default,nodim,bg=default]#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M %d-%b-%y'
