Increase buffer size for tmux

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -34,3 +34,6 @@ set -g window-active-style 'fg=default,bg=colour234'
 
 set-option -g status-right '#(echo "#{pane_title}" | cut -d" " -f1) #[fg=red,dim,bg=default]#(pgrep -alfP "#{pane_pid}" | grep ssh | cut -d" " -f3-)#[fg=default,nodim,bg=default]#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M %d-%b-%y'
 set-option -g status-right-length 80
+
+# it might consume lots of RAM... YES. Please. I'm not using Chrome nor Java, so eat all of it.
+set -g history-limit 50000
