truecolors for tmux

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -4,10 +4,25 @@ set -g repeat-time 0
 
 set -g xterm-keys "on"
 
+# https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6#tmux
+set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
+# https://web.archive.org/web/20160327080414/http://perlstalker.vuser.org/blog/2012/10/16/emacsclient-and-tmux/
+bind-key y   new-window -n "emacs"  "emacsclient -nw"
+bind-key C-y split-window "emacsclient -nw"
+
+bind-key g   new-window -n "shell" "emacsclient -nw --eval '(+eshell/frame)'"
+bind-key C-g split-window "emacsclient -nw --eval '(+eshell/frame)'"
+
 bind 3 split-window -h
 bind 2 split-window -v
 unbind '"'
 unbind '%'
+
+unbind C-b
+set-option -g prefix C-Space
+bind-key Space send-prefix
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
