Some tmux/fzf/z trickery

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -15,6 +15,9 @@ bind-key C-y split-window "emacsclient -nw"
 bind-key g   new-window -n "shell" "emacsclient -nw --eval '(+eshell/frame)'"
 bind-key C-g split-window "emacsclient -nw --eval '(+eshell/frame)'"
 
+bind-key z   new-window "fish -C __fzf_z"
+bind-key C-z split-window "fish -C __fzf_z"
+
 bind 3 split-window -h
 bind 2 split-window -v
 unbind '"'
