--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -8,6 +8,10 @@ set -g xterm-keys "on"
 set -g default-terminal "xterm-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
 # https://web.archive.org/web/20160327080414/http://perlstalker.vuser.org/blog/2012/10/16/emacsclient-and-tmux/
 bind-key y   new-window -n "emacs"  "emacsclient -nw"
 bind-key C-y split-window "emacsclient -nw"
@@ -17,6 +21,9 @@ bind-key C-g split-window "emacsclient -nw --eval '(+eshell/frame)'"
 
 bind-key z   new-window "fish -C __fzf_z"
 bind-key C-z split-window "fish -C __fzf_z"
+
+bind-key r   new-window "fish -C 'eval (__fzf_search_history)'"
+bind-key C-r split-window "fish -C 'eval (__fzf_search_history)'"
 
 bind 3 split-window -h
 bind 2 split-window -v
@@ -28,7 +35,7 @@ set-option -g prefix C-Space
 bind-key Space send-prefix
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+bind R source-file ~/.tmux.conf
 
 #urxvt tab like window switching (-n: no prior escape seq)
 bind -n S-down new-window
@@ -45,6 +52,7 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 bind -n Pageup copy-mode -u
+
 #
 # set active-inactive window styles
 set -g window-active-style 'fg=default,bg=colour234'
@@ -55,3 +63,17 @@ set-option -g status-right-length 80
 
 # it might consume lots of RAM... YES. Please. I'm not using Chrome nor Java, so eat all of it.
 set -g history-limit 50000
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
