Add quick ssh with tmux and fzf

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -19,11 +19,14 @@ bind-key C-y split-window "emacsclient -nw"
 bind-key g   new-window -n "shell" "emacsclient -nw --eval '(+eshell/frame)'"
 bind-key C-g split-window "emacsclient -nw --eval '(+eshell/frame)'"
 
-bind-key z   new-window "fish -C __fzf_z"
-bind-key C-z split-window "fish -C __fzf_z"
+bind-key x   new-window "fish -C __fzf_z"
+bind-key C-x split-window "fish -C __fzf_z"
 
 bind-key r   new-window "fish -C 'eval (__fzf_search_history)'"
 bind-key C-r split-window "fish -C 'eval (__fzf_search_history)'"
+
+bind-key s   new-window "fish -C __fzf_ssh"
+bind-key C-s split-window "fish -C __fzf_ssh"
 
 bind 3 split-window -h
 bind 2 split-window -v
@@ -62,7 +65,7 @@ set-option -g status-right '#(echo "#{pane_title}" | cut -d" " -f1) #[fg=red,dim
 set-option -g status-right-length 80
 
 # it might consume lots of RAM... YES. Please. I'm not using Chrome nor Java, so eat all of it.
-set -g history-limit 50000
+set -g history-limit 500000
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
