Foray into elvish

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -22,8 +22,8 @@ bind-key C-g split-window "emacsclient -nw --eval '(+eshell/frame)'"
 bind-key x   new-window "fish -C __fzf_z"
 bind-key C-x split-window "fish -C __fzf_z"
 
-bind-key r   new-window "fish -C 'eval (__fzf_search_history)'"
-bind-key C-r split-window "fish -C 'eval (__fzf_search_history)'"
+bind-key r   new-window "fish -C 'exec (__fzf_search_history)'"
+bind-key C-r split-window "fish -C 'exec (__fzf_search_history)'"
 
 bind-key s   new-window "fish -C __fzf_ssh"
 bind-key C-s split-window "fish -C __fzf_ssh"
@@ -61,7 +61,7 @@ bind -n Pageup copy-mode -u
 set -g window-active-style 'fg=default,bg=colour234'
 
 
-set-option -g status-right '#(echo "#{pane_title}" | cut -d" " -f1) #[fg=red,dim,bg=default]#(pgrep -alfP "#{pane_pid}" | grep ssh | cut -d" " -f3-)#[fg=default,nodim,bg=default]#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M %d-%b-%y'
+set-option -g status-right '#{prefix_highlight} #(echo "#{pane_title}" | cut -d" " -f1) #[fg=red,dim,bg=default]#(pgrep -alfP "#{pane_pid}" | grep ssh | cut -d" " -f3-)#[fg=default,nodim,bg=default]#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M %d-%b-%y'
 set-option -g status-right-length 80
 
 # it might consume lots of RAM... YES. Please. I'm not using Chrome nor Java, so eat all of it.
@@ -71,7 +71,11 @@ set -g history-limit 500000
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-copycat'
+#set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-open'
+
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
