Migrate scripts from fish

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -19,14 +19,11 @@ bind-key C-y split-window "emacsclient -nw"
 bind-key g   new-window -n "shell" "emacsclient -nw --eval '(+eshell/frame)'"
 bind-key C-g split-window "emacsclient -nw --eval '(+eshell/frame)'"
 
-bind-key x   new-window "fish -C __fzf_z"
-bind-key C-x split-window "fish -C __fzf_z"
+bind-key x   new-window "direnv exec ~/dotfiles/bin/__fzf_z.sh"
+bind-key C-x split-window "direnv exec ~/dotfiles/bin/__fzf_z.sh"
 
-bind-key r   new-window "fish -C 'exec (__fzf_search_history)'"
-bind-key C-r split-window "fish -C 'exec (__fzf_search_history)'"
-
-bind-key s   new-window "fish -C __fzf_ssh"
-bind-key C-s split-window "fish -C __fzf_ssh"
+bind-key s   new-window "direnv exec ~/dotfiles/bin/__fzf_ssh.sh"
+bind-key C-s split-window "direnv exec ~/dotfiles/bin/__fzf_ssh.sh"
 
 bind 3 split-window -h
 bind 2 split-window -v
