Tweak Tmux a little

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -60,6 +60,7 @@ set -g window-active-style 'fg=default,bg=colour234'
 
 set-option -g status-right '#{prefix_highlight} #(echo "#{pane_title}" | cut -d" " -f1) #[fg=red,dim,bg=default]#(ps -o command -g "#{pane_pid}" | grep "ssh " | cut -d" " -f2-)#[fg=default,nodim,bg=default]#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}'
 set-option -g status-right-length 80
+set-option -g status-position bottom
 
 # it might consume lots of RAM... YES. Please. I'm not using Chrome nor Java, so eat all of it.
 set -g history-limit 500000
@@ -72,7 +73,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-open'
-
+set -g @plugin 'Determinant/tmux-colortag'
+set -g @plugin 'laktak/extrakto'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
