--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -406,7 +406,7 @@ shell:
   args:
     - --login
     - -c
-    - unset SHELL; . $(brew --prefix asdf)/asdf.sh; env TMUX_COLORTAG_TAG_ONLY=yes tmux
+    - unset SHELL; . $(brew --prefix asdf)/asdf.sh; env TMUX_COLORTAG_TAG_ONLY=yes tmux new-session -A -s 0
 
 # Startup directory
 #
