--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -694,6 +694,8 @@ key_bindings:
   - { key: Key7, mods: Command, chars: "\x02\x37" }
   - { key: Key8, mods: Command, chars: "\x02\x38" }
   - { key: Key9, mods: Command, chars: "\x02\x39" }
+
+  - { key: Comma, mods: Command, action: Hide }
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
