Try out goku for karabiner
https://github.com/yqrashawn/GokuRakuJoudo

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -38,9 +38,9 @@ bind-key Space send-prefix
 bind R source-file ~/.tmux.conf
 
 #urxvt tab like window switching (-n: no prior escape seq)
-bind -n M-down new-window
-bind -n M-left prev
-bind -n M-right next
+bind -n S-down new-window
+bind -n S-left prev
+bind -n S-right next
 
 #switch panels
 bind -n C-k selectp -U # switch to panel Up
