--- a/stow/core/.direnvrc
+++ b/stow/core/.direnvrc
@@ -32,14 +32,16 @@ function _scoiatael_init() {
     _scoiatael_maybe_PATH_add "/usr/local/MacGPG2/bin"
     _scoiatael_maybe_PATH_add "$HOME/.emacs.d/bin"
     _scoiatael_maybe_PATH_add "$HOME/.local/bin"
-    _scoiatael_maybe_PATH_add "$HOME/.asdf/shims"
-    _scoiatael_maybe_PATH_add "/opt/asdf-vm/bin"
     _scoiatael_maybe_PATH_add "$HOME/dotfiles/bin"
     _scoiatael_maybe_PATH_add "/usr/local/opt/sqlite/bin"
     _scoiatael_maybe_PATH_add "/usr/local/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/bin"
     _scoiatael_maybe_PATH_add "/usr/local/bin"
 
-    source "$(asdf direnv hook asdf)"
+    if (test -n "$ASDF_DIR"); then
+        _scoiatael_maybe_PATH_add "$HOME/.asdf/shims"
+        _scoiatael_maybe_PATH_add "/opt/asdf-vm/bin"
+        source "$(asdf direnv hook asdf)"
+    fi
 
     [ "$(uname)" == "Linux" ] && export AWS_VAULT_BACKEND=kwallet # nixOS workaround for https://github.com/99designs/aws-vault/issues/670
 
