--- a/stow/core/.direnvrc
+++ b/stow/core/.direnvrc
@@ -33,6 +33,7 @@ function _scoiatael_init() {
     _scoiatael_maybe_PATH_add "$HOME/.emacs.d/bin"
     _scoiatael_maybe_PATH_add "$HOME/.local/bin"
     _scoiatael_maybe_PATH_add "$HOME/dotfiles/bin"
+    _scoiatael_maybe_PATH_add "$HOME/.cargo/bin"
     _scoiatael_maybe_PATH_add "/usr/local/opt/sqlite/bin"
     _scoiatael_maybe_PATH_add "/usr/local/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/bin"
     _scoiatael_maybe_PATH_add "/usr/local/bin"
