--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,14 +1,6 @@
 set-option -g destroy-unattached off
-set -g escape-time 0
 set -g repeat-time 0
 
-set -g xterm-keys "on"
-
-# https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6#tmux
-set -g default-terminal "xterm-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
-
-set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
@@ -29,10 +21,6 @@ bind 3 split-window -h
 bind 2 split-window -v
 unbind '"'
 unbind '%'
-
-unbind C-b
-set-option -g prefix C-Space
-bind-key Space send-prefix
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind R source-file ~/.tmux.conf
@@ -61,24 +49,4 @@ set-option -g status-right '#{prefix_highlight} #(echo "#{pane_title}" | cut -d"
 set-option -g status-right-length 80
 set-option -g status-position bottom
 
-# it might consume lots of RAM... YES. Please. I'm not using Chrome nor Java, so eat all of it.
-set -g history-limit 500000
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-#set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'Determinant/tmux-colortag'
-set -g @plugin 'laktak/extrakto'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run-shell ~/.tmux/plugins/tmux-colortag/tmux-colortag.tmux
