--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -17,13 +17,15 @@ bind-key C-x split-window "direnv exec ~/dotfiles/bin/__fzf_z.sh"
 bind-key s   new-window "direnv exec ~/dotfiles/bin/__fzf_ssh.sh"
 bind-key C-s split-window "direnv exec ~/dotfiles/bin/__fzf_ssh.sh"
 
+bind-key -n S-up copy-mode -u\; send -X search-backward-incremental "λ"
+
 bind 3 split-window -h
 bind 2 split-window -v
 unbind '"'
 unbind '%'
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind R source-file ~/.tmux.conf
+bind R source-file ~/.config/tmux/tmux.conf
 
 #urxvt tab like window switching (-n: no prior escape seq)
 bind -n S-down new-window
