--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -17,7 +17,9 @@ bind-key C-x split-window "direnv exec ~/dotfiles/bin/__fzf_z.sh"
 bind-key s   new-window "direnv exec ~/dotfiles/bin/__fzf_ssh.sh"
 bind-key C-s split-window "direnv exec ~/dotfiles/bin/__fzf_ssh.sh"
 
-bind-key -n S-up copy-mode -u\; send -X search-backward-incremental "λ"
+bind-key -n S-up copy-mode\; send -X search-backward-text λ
+# use it in diffs for easy jumps
+bind-key -n C-S-up copy-mode\; send -X search-backward-text ±
 
 bind 3 split-window -h
 bind 2 split-window -v
