--- a/stow/macos/.yabairc
+++ b/stow/macos/.yabairc
@@ -22,8 +22,9 @@ yabai -m config window_topmost off
 yabai -m config window_shadow on
 yabai -m config window_opacity off
 yabai -m config window_opacity_duration 0.0
-yabai -m config active_window_opacity 1.0
-yabai -m config normal_window_opacity 0.90
+# Conflicts with MonitorControl
+# yabai -m config active_window_opacity 1.0
+# yabai -m config normal_window_opacity 0.90
 yabai -m config window_border on
 yabai -m config window_border_width 2
 yabai -m config active_window_border_color 0xff775759
@@ -46,7 +47,8 @@ yabai -m config window_gap 3
 
 # General app settings
 yabai -m rule --add app="^Bitwarden$" manage=off grid=128:128:16:16:96:96
-yabai -m rule --add app="^Alacritty$" manage=off grid=128:128:1:1:126:126
+# Using iTerm for now
+# yabai -m rule --add app="^Alacritty$" manage=off grid=128:128:1:1:126:126
 yabai -m rule --add app="^Wally$" manage=off grid=128:128:1:1:126:126
 yabai -m rule --add app="^Alfred Preferences$" manage=off grid=128:128:16:16:96:96
 yabai -m rule --add app="^Karabiner-Elements$" manage=off grid=128:128:16:16:96:96
