Add alacritty theme switcher
...based on https://gist.github.com/joaofnds/0b47d1234770217ac99805023f04c114

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -46,6 +46,6 @@ bind-key -r C-l select-window -t :+
 bind -n Pageup copy-mode -u
 
 # set active-inactive window styles
-set -g window-active-style 'fg=default,bg=colour234'
+# set -g window-active-style 'fg=default,bg=colour234'
 
 run-shell ~/.tmux/plugins/tmux-colortag/tmux-colortag.tmux
