--- a/config/com.googlecode.iterm2.plist
+++ b/config/com.googlecode.iterm2.plist
@@ -375,19 +375,19 @@
 			<key>Horizontal Spacing</key>
 			<real>1</real>
 			<key>HotKey Activated By Modifier</key>
-			<true/>
+			<false/>
 			<key>HotKey Alternate Shortcuts</key>
 			<array/>
 			<key>HotKey Characters</key>
-			<string></string>
+			<string>'</string>
 			<key>HotKey Characters Ignoring Modifiers</key>
-			<string></string>
+			<string>'</string>
 			<key>HotKey Key Code</key>
-			<integer>0</integer>
+			<integer>39</integer>
 			<key>HotKey Modifier Activation</key>
 			<integer>3</integer>
 			<key>HotKey Modifier Flags</key>
-			<integer>0</integer>
+			<integer>1048576</integer>
 			<key>HotKey Window Animates</key>
 			<false/>
 			<key>HotKey Window AutoHides</key>
