--- a/config/aerospace.toml
+++ b/config/aerospace.toml
@@ -98,16 +98,16 @@ outer.right =      0
 # alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-alt-ctrl-h = 'focus left'
-alt-ctrl-j = 'focus down'
-alt-ctrl-k = 'focus up'
-alt-ctrl-l = 'focus right'
+alt-ctrl-left = 'focus left'
+alt-ctrl-down = 'focus down'
+alt-ctrl-up = 'focus up'
+alt-ctrl-right = 'focus right'
 
 # See: https:/onikitabobko.github.io/AeroSpace/commands#move
-alt-ctrl-shift-h = 'move left'
-alt-ctrl-shift-j = 'move down'
-alt-ctrl-shift-k = 'move up'
-alt-ctrl-shift-l = 'move right'
+alt-ctrl-shift-left = 'move left'
+alt-ctrl-shift-down = 'move down'
+alt-ctrl-shift-up = 'move up'
+alt-ctrl-shift-right = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 alt-shift-minus = 'resize smart -50'
