Tweaks to fastanime

--- a/config/FastAnime/config.ini
+++ b/config/FastAnime/config.ini
@@ -16,23 +16,20 @@ preview_header_color = 215,0,95
 # For the header 
 # Be sure to indent
 header_ascii_art = 	
-	
-	███████╗░█████╗░░██████╗████████╗░█████╗░███╗░░██╗██╗███╗░░░███╗███████╗
-	██╔════╝██╔══██╗██╔════╝╚══██╔══╝██╔══██╗████╗░██║██║████╗░████║██╔════╝
-	█████╗░░███████║╚█████╗░░░░██║░░░███████║██╔██╗██║██║██╔████╔██║█████╗░░
-	██╔══╝░░██╔══██║░╚═══██╗░░░██║░░░██╔══██║██║╚████║██║██║╚██╔╝██║██╔══╝░░
-	██║░░░░░██║░░██║██████╔╝░░░██║░░░██║░░██║██║░╚███║██║██║░╚═╝░██║███████╗
-	╚═╝░░░░░╚═╝░░╚═╝╚═════╝░░░░╚═╝░░░╚═╝░░╚═╝╚═╝░░╚══╝╚═╝╚═╝░░░░░╚═╝╚══════╝
+	┏┓    ┏┓  •
+	┣ ┏┓┏╋┣┫┏┓┓┏┳┓┏┓
+	┻ ┗┻┛┗┛┗┛┗┗┛┗┗┗
 
-header_color = 95,135,175
+header_color = 238,153,160
 
 # To be passed to fzf
 # Be sure to indent
 fzf_opts = 	
-	--color=fg:#d0d0d0,fg+:#d0d0d0,bg:#121212,bg+:#262626
-	--color=hl:#5f87af,hl+:#5fd7ff,info:#afaf87,marker:#87ff00
-	--color=prompt:#d7005f,spinner:#af5fff,pointer:#af5fff,header:#87afaf
-	--color=border:#262626,label:#aeaeae,query:#d9d9d9
+	--color=bg+:#363a4f,bg:#24273a,spinner:#f4dbd6,hl:#ed8796
+	--color=fg:#cad3f5,header:#ed8796,info:#c6a0f6,pointer:#f4dbd6
+	--color=marker:#b7bdf8,fg+:#cad3f5,prompt:#c6a0f6,hl+:#ed8796
+	--color=selected-bg:#494d64
+	--color=border:#363a4f,label:#cad3f5
 	--border="rounded" --border-label="" --preview-window="border-rounded" --prompt="> "
 	--marker=">" --pointer="◆" --separator="─" --scrollbar="│"
 
@@ -44,7 +41,7 @@ fzf_opts =
 # because it's a lot of work
 # to look for the right one for each menu option
 # Be sure to also give the replacement emoji
-icons = False
+icons = True
 
 # Whether to normalize provider titles [True/False]
 # Basically takes the provider titles and finds the corresponding Anilist title, then changes the title to that
@@ -71,7 +68,7 @@ check_for_updates = False
 # though it works relatively well for new anime
 # especially with SubsPlease and HorribleSubs
 # Oh, and you should have webtorrent CLI to use this
-provider = allanime
+provider = animepahe
 
 # Display language [english, romaji]
 # This is passed to Anilist directly and is used to set the language for anime titles
@@ -88,7 +85,7 @@ downloads_dir = /Users/lukaszczaplinski/Movies/FastAnime
 # If you don't care about image and text previews, it doesn’t matter
 # though it’s awesome
 # Try it, and you will see
-preview = False 
+preview = True 
 
 # Whether to show images in the preview [True/False]
 # Windows users: just switch to Linux 😄
@@ -114,7 +111,7 @@ ffmpegthumbnailer_seek_time = -1
 menu_order = 
 
 # whether to use fzf as the interface for the anilist command and others. [True/False]
-use_fzf = False 
+use_fzf = True 
 
 # whether to use rofi for the UI [True/False]
 # It's more useful if you want to create a desktop entry, 
