--- a/config/raycast/emacs/package.json
+++ b/config/raycast/emacs/package.json
@@ -10,20 +10,20 @@
   "commands": [
     {
       "name": "list-projects",
-      "title": "list projects",
-      "description": "",
+      "title": "emacs: list projects",
+      "description": "List open Emacs projects",
       "mode": "view"
     },
     {
       "name": "open-project",
-      "title": "open project",
-      "description": "",
+      "title": "emacs: open project",
+      "description": "Open known Emacs project",
       "mode": "view"
     },
     {
       "name": "kill-workspace",
-      "title": "kill workspace",
-      "description": "",
+      "title": "emacs: kill workspace",
+      "description": "Kill select Emacs workspace",
       "mode": "view"
     }
   ],
