--- a/config/aerospace.toml
+++ b/config/aerospace.toml
@@ -216,3 +216,7 @@ alt-shift-l = ['join-with right', 'mode main']
 [[on-window-detected]]
     if.app-name-regex-substring = 'mpv'
     run = ['layout floating']  # The callback itself
+
+[[on-window-detected]]
+    if.app-id = 'io.zsa.keymapp'
+    run = ['layout floating']
