--- a/config/process-compose/shortcuts.yaml
+++ b/config/process-compose/shortcuts.yaml
@@ -1,34 +1,16 @@
 # $XDG_CONFIG_HOME/process-compose/shortcuts.yaml
 shortcuts:
-  log_follow: # action name - don't edit
-    toggle_description: # optional description for toggle buttons. Will use default if not defined
-      false: Follow Off
-      true: Follow On
+  log_follow:
     shortcut: Ctrl-F
   log_screen:
-    toggle_description:
-      false: Half Screen
-      true: Full Screen
     shortcut: Ctrl-L
   log_wrap:
-    toggle_description:
-      false: Wrap Off
-      true: Wrap On
     shortcut: Ctrl-W
   process_restart:
-    description: Restart # optional description for a button. Will use default if not defined
     shortcut: Ctrl-R
   process_screen:
-    toggle_description:
-      false: Half Screen
-      true: Full Screen
     shortcut: Ctrl-P
-  process_start:
-    description: Start
-    shortcut: Ctrl-S
   process_stop:
-    description: Stop
     shortcut: Ctrl-Z
   quit:
-    description: Quit
     shortcut: Ctrl-Q
